tests/baselines/reference/checkForObjectTooStrict.errors.txt
==== tests/cases/compiler/checkForObjectTooStrict.ts (2 errors) ====
    module Foo {
    
        export class Object {
    
        }
    
    }
    
     
    
    class Bar extends Foo.Object { // should work
    
        constructor () {
    
            super();
    
        }
    
    }
    
    
    class Baz extends Object {
                      ~~~~~~
!!! error TS2073: A class may only extend another class.
    
        constructor () { // ERROR, as expected
    
            super();
            ~~~~~
!!! error TS2103: 'super' cannot be referenced in non-derived classes.
    
        }
    
    }
    